# rc

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.config.ts  package.json  pnpm-lock.yaml  rc.config.json  tsconfig.json
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build.yml  ci.yml  release.yml
__patches__/: cli_get_config.patch
docs/: BuildInstructions.md  README.md  RunningTests.md  index.md
examples/: rc.config.json
patches/: cli_get_config.patch  http_idea.patch
src/: cli.rs  http.rs  index.ts  main.rs  models.rs  utils.rs
src/actions/: id.rs  init.ts
src/args/: flags.rs
src/commands/: delete.rs  get.rs  init.rs  mod.rs  patch.rs  post.rs  put.rs
src/constants/: http.ts  messages.ts  options.ts
src/helpers/: diff.ts  fetch.ts  utils.ts  verify-url-base.ts
src/internal/: init_command.rs  mod.rs
