[package]
name = "rc"
version = "0.1.0"
edition = "2021"
description = "Simple REST Client is an easy-to-use command-line tool for interacting with RESTful APIs."

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
log = { version = "0.4", features = ["std", "serde"] }
serde_json = "1.0.120"

[package.metadata.winres]
# This section defines the metadata that appears in the rc.exe PE header.
OriginalFilename = "rc.exe"
LegalCopyright = "© Sebastian Garcia contributor. MIT licensed."
ProductName = "RC"
FileDescription = "RC: Simple REST Client is an easy-to-use command-line tool"
